test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_case_stmt_default_middle.draco
proc main() void : 
    case ch
    incase 1:
    	flag := false;
    default:
        flag := true;
    incase 5 .. 9:
        x := y;
        y := z;
    esac;
corp;

