test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_case_stmt_multiple_defaults.draco
proc main() void : 
    case ch
    incase 1:
        y := z;
    default:
    	flag := false;
    incase 0:
        x := y;
    default:
        flag := true;
    esac;
corp;

